<resources>
    <string name="app_name">Drawing Application</string>
    <string name="background_image">background image</string>
    <string name="color_skin">color skin</string>
    <string name="color_black">color black</string>
    <string name="color_red">color red</string>
    <string name="color_green">color green</string>
    <string name="color_blue">color blue</string>
    <string name="color_yellow">color yellow</string>
    <string name="color_lollipop">color lollipop</string>
    <string name="color_purple">color purple</string>
    <string name="brush_image">brush image</string>
    <string name="gallery_image">gallery image</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="save">save</string>
    <string name="length_and_breadth">Length and Breadth?</string>
    <string name="length">length</string>
    <string name="breadth">breadth</string>
    <string name="enter">Enter</string>
    <string name="radius">Radius?</string>
    <string name="ETradius">radius</string>
    <string name="color_white">color white</string>
    <string name="refresh">refresh</string>
    <string name="help">Help</string>
    <string name="cancel_drawing_shapes">cancel drawing shapes</string>
    <string name="rectangle">rectangle</string>
    <string name="circle">circle</string>
    <string name="image_medium">image_medium</string>
    <string name="image_small">image_small</string>
    <string name="image_large">image_large</string>
</resources>