<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length_and_breadth"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/et_Length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="20sp"
        android:hint="@string/length"
        android:layout_margin="5dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_Breadth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="20sp"
        android:hint="@string/breadth"
        android:layout_margin="5dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_Enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/enter" />
</LinearLayout>